[package]
name = "wimc"
version = "0.0.1"
edition = "2021"
authors = ["Adriiii"]
description = "Wizards in Memory Cache"
readme = "README.md"
repository = "https://github.com/AdrisGithub/wimc"
license = "GPL-2.0-or-later"
documentation = "https://docs.rs/wimc"
exclude = ["src/resources/", ".github/", "sonar-project.properties"]

[[bin]]
path = "src/main/main.rs"
name = "wimc"


[dependencies]
aul = "1.3.1"
whdp = "1.1.11"
wjp = "1.1.1"
wbsl = "0.0.4"
wimcm = "0.1.2"
wbdl = "1.1.0"