[package]
name = "wimc"
version = "0.0.1"
edition = "2021"
authors = ["Adriiii"]
description = "Wizards in Memory Cache"
readme = "README.md"
repository = "https://github.com/AdrisGithub/wimc"
license = "GPL-2.0-or-later"
documentation = "https://docs.rs/wimc"
exclude = ["src/resource/*", ".github/", "sonar-project.properties"]

[[bin]]
path = "src/main/main.rs"
name = "wimc"


[dependencies]
aul = { version = "1.3.1", features = ["no-color"] }
whdp = "1.1.11"
wjp = "1.1.2"
wbsl = "0.0.4"
wimcm = "0.2.4"
wbdl = "1.1.0"