[package]
name = "wimc"
version = "0.1.0"
edition = "2021"
authors = ["Adriiii"]
description = "Wizards in Memory Cache"
readme = "README.md"
repository = "https://github.com/AdrisGithub/wimc"
license = "GPL-2.0-or-later"
documentation = "https://docs.rs/wimc"
exclude = ["src/resource/*", ".github/", "sonar-project.properties"]

[[bin]]
path = "src/main/main.rs"
name = "wimc"


[dependencies]
aul =  "1.4.1"
whdp = "1.2.0"
wjp = "1.1.3"
wbsl = "0.1.0"
wimcm = "0.2.6"
wbdl = "1.2.0"